# split-expense

./: Cargo.toml  Rocket.toml
src/: config.rs  exception.rs  main.rs
src/guard/: basic_auth.rs  jwt_auth.rs  mod.rs
src/handlers/: account.rs  expense.rs  group.rs  login.rs  mod.rs  notification.rs  ping.rs  user.rs
src/middleware/: logging.rs
src/models/: entity.rs
src/security/: jwt.rs
