[package]
name = "split-expense"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
log = "0.4.22"
mongodb = "3.1.1"
regex = "1.11.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.216"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
tokio = { version = "1.42.0", features = ["full"] }
